<?xml version="1.0"?>
<package format="2">
    <name>a2dr_description</name>
    <version>0.1.0</version>
    <description>The a2dr_description package</description>
    <author email="rabayjai112@gmail.com">Sorawit Inprom</author>
    <maintainer email="rabayjai112@gmail.com">Sorawit Inprom</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>robot_state_publisher</build_depend>
    <build_depend>urdf</build_depend>
    <build_depend>xacro</build_depend>
    <build_export_depend>robot_state_publisher</build_export_depend>
    <build_export_depend>urdf</build_export_depend>
    <build_export_depend>xacro</build_export_depend>
    <exec_depend>robot_state_publisher</exec_depend>
    <exec_depend>urdf</exec_depend>
    <exec_depend>xacro</exec_depend>

</package>
