<?xml version="1.0"?>
<package format="2">
    <name>a2dr_msgs</name>
    <version>0.0.0</version>
    <description>The a2dr_msgs package</description>
    <author email="rabayjai112@gmail.com">Sorawit Inprom</author>
    <maintainer email="rabayjai112@gmail.com">Sorawit Inprom</maintainer>
    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>message_generation</build_export_depend>
    <exec_depend>message_runtime</exec_depend>

</package>
